# pyblio-1.2

./: ChangeLog  ChangeLog-1.2  MAINTAINERS  Makefile.am  NEWS  autogen.sh  configure.ac  pybliographer.doap  pybliographer.py  pybliographic.appdata.xml  pybliographic.desktop.in  setup-check.py
Pyblio/: Base.py  Query.py  Sort.py  version.py.in
Pyblio/ConfDir/: Resource.py
Pyblio/Format/: BibTeX.py  Medline.py  OvidLike.py  ut_Ovidlike.py
Pyblio/GnomeUI/: Config.py  Document.py  Editor.py  Fields.py  Index.py  Makefile.am  Pybliographic.py  Utils.py  __init__.py
Pyblio/GnomeUI/glade/: Makefile.am  medline.glade  sort.glade
Pyblio/Output/: latexutils.py
data/: Makefile.am
data/icons/: Makefile.am
data/pixmaps/: Makefile.am
data/src/: Makefile.am
doc/C/: Makefile.am  commandline.xml  gui.xml  preface.xml  pybliographer-C.omf  pybliographer.xml
etc/: installer.in
help/: Makefile.am  pybliographer.omf.in
help/C/: about.page  addhelp.page  command-line.page  customization.page  gettingstarted.page  gui-creating.page  gui-edit.page  gui-formats.page  gui-navigating.page  gui-opening.page  gui-pubmed.page  gui-searching.page  gui-settings.page  gui-sorting.page  gui-styles.page  gui-usinglyx.page  gui.page  index.page  license.page  pybliographer-C.omf  pybliographer.xml  scripting-basics.page  scripting-existing.page  scripting-writeown.page  typcon.page  whatsnew.page
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/sl/: sl.po
po/: ChangeLog  LINGUAS  Makefile.am  POTFILES.in  README.i18n  ar.po  az.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  fi.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  lv.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  sl.po  sr.po  (+6 more)
scripts/: Makefile.am  pybformat.py  pybliocheck.py  pybliocompact.py  pyblioconvert.py  pyblioformat.py  pybliotex.py  pybliotext.py  pybscript.in
tests/: Makefile.am  compact  convert  format.html  format.latex  format.raw  format.text  medline.bib  pubmed.bib  pyblioformat  pybliotex  pybliotext  test-pybliocheck
