# This file is part of pybliographer
# 
# Copyright (C) 1998-2004 Frederic GOBRY
# Email : gobry@pybliographer.org
# 	   
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2 
# of the License, or (at your option) any later version.
#   
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details. 
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
# 

AUTOMAKE_OPTIONS = -Wno-portability

include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = pybliographer
DOC_FIGURES =	figures/edit.png	\
		figures/edit2.png	\
		figures/fields.png	\
		figures/format.png	\
		figures/main.png	\
		figures/medline.png	\
		figures/open.png	\
		figures/search.png	\
		figures/sort.png

DOC_PAGES = 	about.page		\
		addhelp.page		\
		command-line.page	\
		customization.page	\
		gettingstarted.page	\
		gui-creating.page	\
		gui-edit.page		\
		gui-formats.page	\
		gui-navigating.page	\
		gui-opening.page	\
		gui.page		\
		gui-pubmed.page		\
		gui-searching.page	\
		gui-settings.page	\
		gui-sorting.page	\
		gui-styles.page		\
		gui-usinglyx.page	\
		index.page		\
		license.page		\
		scripting-basics.page	\
		scripting-existing.page	\
		scripting-writeown.page	\
		typcon.page		\
		whatsnew.page

DOC_LINGUAS = de es sl

